# Gun-Aim-Game

./: Cargo.toml
.cargo/: config.toml
crates/animation_plugin/src/: event.rs  lib.rs
src/: main.rs  resource.rs  setup.rs
src/game/: components.rs  mod.rs  systems.rs
src/game/hand_plugin/: components.rs  mod.rs  systems.rs
