[package]
name = "aim_trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
avian2d = { workspace = true }
rand = { workspace = true }
animation_plugin = { workspace = true }

[workspace.dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "wayland",
    "asset_processor",
    "serialize",
    "dynamic_linking",
    "bevy_audio",
    "vorbis",
] }
avian2d = "*"
rand = "0.8.5"
animation_plugin = { path = "crates/animation_plugin" }

[workspace]
resolver = "2"
members = ["crates/animation_plugin"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
incremental = false
debug = false
